gcc/testsuite/g++.old-deja/g++.other/typename2.C
// { dg-do assemble  }

template<typename T>
void f()
{
  typename T::u;  // { dg-error "" } declare anything
}
